2013-05-07  Corey Minyard <minyard@acm.org>

	* buffer.c: Add a buffer wrap that was missed, identified by
	Brian Rzycki.

2013-03-01  Corey Minyard <minyard@acm.org>

	* Makefile.am: Added 'ACLOCAL_AMFLAGS = -I m4' as suggested by
	libtoolize.

	* configure.in -> configure.ac

	* configure.ac: Add 'AC_CONFIG_MACRO_DIR([m4])' as suggested by
	libtoolize.

	* configure.ac: Version 2.8.

2013-02-28  Corey Minyard <minyard@acm.org>

	* dataxfer.c, readconfig.c: Properly handle an empty string passed
	as a banner, openstr, or closestr.

2013-01-29  Corey Minyard <minyard@acm.org>

	* utils.h, utils.c: Have scan_tcp_port() take the domain.

	* dataxfer.c, controller.c: If the socket open fails with
	EAFNOSUPPORT, retry the address with IF_INET (IPV4-only).  This
	way the call will still work even if IPV6 is disabled.

2012-12-19  Corey Minyard <minyard@acm.org>

	* README: Add info on how to generate configure and friends.

2012-12-13  Jordi Riera-Babures <jrierab@gmail.com>, Corey Minyard <minyard@acm.org>
	* devcfg.c: Add support for a bunch of high-speed baud rates.

2012-12-07  Corey Minyard <minyard@acm.org>

	* utils.c: Change hints.ai_family from AF_INET6 to AF_UNSPEC.
	That way it won't force IPV6, but it will return either.  I
	think that's right.

2012-12-04  Corey Minyard <minyard@acm.org>

	* utils.c, utils.h:  Modify scan_tcp_port to return the length of
	the socket info returned by getaddrinfo().

	* controller.c, dataxfer.c: Use the length returned by
	scan_tcp_port(), not the size of sockaddr_storage, for the length
	of the socket information.

2012-09-26  Corey Minyard <minyard@acm.org>

	* configure.in: Move to 2.8-rc3

	* dataxfer.c, dataxfer.h, selector.c, selector.h, ser2net.c: Add
	clean shutdown handling so locks are properly removed when the
	program is killed with SIGINT.

	* dataxfer.c: Modify the lock files to be Linux FHS compiliant.

2012-09-10  Corey Minyard <minyard@acm.org>

	* dataxfer.c: Fix a bug reported by Jan-Benedict Glaw, where